// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Correctly returns CreateApplicationTopologyLink 1`] = `
<Link
  to={
    Object {
      "pathname": "/multicloud/applications/details/testNamespace/testApp/topology",
      "search": "?apiVersion=application.app.k8s.io",
    }
  }
>
  View topology
</Link>
`;

exports[`Correctly returns CreateDetailsLink - ACM-Application 1`] = `
<body>
  <div>
    <a
      href="/multicloud/applications/details/testApplicationNamespace/testApplicationName/overview?apiVersion=application.app.k8s.io&cluster=cluster"
    >
      testApplicationName
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateDetailsLink - Cluster 1`] = `
<body>
  <div>
    <a
      href="/multicloud/infrastructure/clusters/details/testClusterName/testClusterName/overview"
    >
      testClusterName
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateDetailsLink - Default 1`] = `
<body>
  <div>
    <a
      href="/multicloud/home/search/resources?cluster%3DtestCluster%26kind%3DPod%26namespace%3DtestPodNamespace%26name%3DtestPodName"
    >
      testPodName
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateDetailsLink - HUB-Policy 1`] = `
<body>
  <div>
    <a
      href="/multicloud/governance/policies/details/testPolicyNamespace/testPolicyName"
    >
      testPolicyName
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateDetailsLink - Managed-Policy 1`] = `
<body>
  <div>
    <a
      href="/multicloud/home/search/resources?cluster%3DtestCluster%26kind%3DPolicy%26namespace%3DtestPolicyNamespace%26name%3DtestPolicyName"
    >
      testPolicyName
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateDetailsLink - NON-Application 1`] = `
<body>
  <div>
    <a
      href="/multicloud/home/search/resources?cluster%3DtestCluster%26kind%3DApplication%26namespace%3DtestApplicationNamespace%26name%3DtestApplicationName"
    >
      testApplicationName
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateDetailsLink - PolicyReport 1`] = `
<body>
  <div>
    <a
      href="/multicloud/infrastructure/clusters/details/testPolicyReportNamespace/testPolicyReportNamespace/overview?showClusterIssues%3Dtrue"
    >
      testPolicyReport
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateExternalLink from clusterip 1`] = `"http://clusterip"`;

exports[`Correctly returns CreateExternalLink from consoleURL 1`] = `
<a
  href="http://consoleurl"
  rel="noopener noreferrer"
  target="_blank"
>
  Launch
</a>
`;

exports[`Correctly returns GlobalHub CreateDetailsLink - Default 1`] = `
<body>
  <div>
    testPodName
  </div>
</body>
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-application 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": "-",
    "header": "Topology",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-channel 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "type",
    "header": "Type",
    "sort": "type",
  },
  Object {
    "cell": "pathname",
    "header": "Pathname",
    "sort": "pathname",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-cluster 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "ManagedClusterConditionAvailable",
    "header": "Available",
    "sort": "ManagedClusterConditionAvailable",
  },
  Object {
    "cell": "HubAcceptedManagedCluster",
    "header": "Hub accepted",
    "sort": "HubAcceptedManagedCluster",
  },
  Object {
    "cell": "ManagedClusterJoined",
    "header": "Joined",
    "sort": "ManagedClusterJoined",
  },
  Object {
    "cell": "nodes",
    "header": "Nodes",
    "sort": "nodes",
  },
  Object {
    "cell": "kubernetesVersion",
    "header": "Kubernetes version",
    "sort": "kubernetesVersion",
  },
  Object {
    "cell": "cpu",
    "header": "CPU",
    "sort": "cpu",
  },
  Object {
    "cell": "memory",
    "header": "Memory",
    "sort": "memory",
  },
  Object {
    "cell": "-",
    "header": "Console URL",
    "sort": "consoleURL",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-clusteroperator 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "version",
    "header": "Version",
    "sort": "version",
  },
  Object {
    "cell": "available",
    "header": "Available",
    "sort": "available",
  },
  Object {
    "cell": "progressing",
    "header": "Progressing",
    "sort": "progressing",
  },
  Object {
    "cell": "degraded",
    "header": "Degraded",
    "sort": "degraded",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-clusterserviceversion 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "version",
    "header": "Version",
    "sort": "version",
  },
  Object {
    "cell": "phase",
    "header": "Phase",
    "sort": "phase",
  },
  Object {
    "cell": "display",
    "header": "Display",
    "sort": "display",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-cronjob 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "schedule",
    "header": "schedule",
    "sort": "schedule",
  },
  Object {
    "cell": "suspend",
    "header": "Suspend",
    "sort": "suspend",
  },
  Object {
    "cell": "active",
    "header": "Active",
    "sort": "active",
  },
  Object {
    "cell": "-",
    "header": "Last schedule",
    "sort": "lastSchedule",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-daemonset 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "desired",
    "header": "Desired",
    "sort": "desired",
  },
  Object {
    "cell": "current",
    "header": "Current",
    "sort": "current",
  },
  Object {
    "cell": "ready",
    "header": "Ready",
    "sort": "ready",
  },
  Object {
    "cell": "updated",
    "header": "Updated",
    "sort": "updated",
  },
  Object {
    "cell": "available",
    "header": "Available",
    "sort": "available",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-deployable 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": "chartUrl",
    "header": "Chart URL",
    "sort": "chartUrl",
  },
  Object {
    "cell": "dependencies",
    "header": "Dependencies",
    "sort": "dependencies",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-deployment 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "desired",
    "header": "Desired",
    "sort": "desired",
  },
  Object {
    "cell": "current",
    "header": "Current",
    "sort": "current",
  },
  Object {
    "cell": "ready",
    "header": "Ready",
    "sort": "ready",
  },
  Object {
    "cell": "available",
    "header": "Available",
    "sort": "available",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-genericresource 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-helmrelease 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "sourceType",
    "header": "Source type",
    "sort": "sourceType",
  },
  Object {
    "cell": "url",
    "header": "URL",
    "sort": "url",
  },
  Object {
    "cell": "chartPath",
    "header": "Chart path",
    "sort": "chartPath",
  },
  Object {
    "cell": "branch",
    "header": "Branch",
    "sort": "branch",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-job 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "completions",
    "header": "Completions",
    "sort": "completions",
  },
  Object {
    "cell": "parallelism",
    "header": "Parallelism",
    "sort": "parallelism",
  },
  Object {
    "cell": "successful",
    "header": "Successful",
    "sort": "successful",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-namespace 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "status",
    "header": "Status",
    "sort": "status",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-node 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "status",
    "header": "Status",
    "sort": "status",
  },
  Object {
    "cell": "role",
    "header": "Role",
    "sort": "role",
  },
  Object {
    "cell": "architecture",
    "header": "Architecture",
    "sort": "architecture",
  },
  Object {
    "cell": "osImage",
    "header": "OS image",
    "sort": "osImage",
  },
  Object {
    "cell": "cpu",
    "header": "CPU",
    "sort": "cpu",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-persistentvolume 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "type",
    "header": "Type",
    "sort": "type",
  },
  Object {
    "cell": "status",
    "header": "Status",
    "sort": "status",
  },
  Object {
    "cell": "capacity",
    "header": "Capacity",
    "sort": "capacity",
  },
  Object {
    "cell": "accessMode",
    "header": "Access mode",
    "sort": "accessMode",
  },
  Object {
    "cell": "claimRef",
    "header": "Claim",
    "sort": "claimRef",
  },
  Object {
    "cell": "reclaimPolicy",
    "header": "Reclaim policy",
    "sort": "reclaimPolicy",
  },
  Object {
    "cell": "path",
    "header": "Path",
    "sort": "path",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-persistentvolumeclaim 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "status",
    "header": "Status",
    "sort": "status",
  },
  Object {
    "cell": "volumeName",
    "header": "Persistent volume",
    "sort": "volumeName",
  },
  Object {
    "cell": "request",
    "header": "Requests",
    "sort": "request",
  },
  Object {
    "cell": "accessMode",
    "header": "Access mode",
    "sort": "accessMode",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-placementbinding 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": "subjects",
    "header": "Subjects",
    "sort": "subjects",
  },
  Object {
    "cell": "placementpolicy",
    "header": "Placement policy",
    "sort": "placementpolicy",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-placementpolicy 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": "replicas",
    "header": "Replicas",
    "sort": "replicas",
  },
  Object {
    "cell": "decisions",
    "header": "Decisions",
    "sort": "decisions",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-placementrule 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "replicas",
    "header": "Replicas",
    "sort": "replicas",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-pod 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "status",
    "header": "Status",
    "sort": "status",
  },
  Object {
    "cell": "restarts",
    "header": "Restarts",
    "sort": "restarts",
  },
  Object {
    "cell": "hostIP",
    "header": "Host IP",
    "sort": "hostIP",
  },
  Object {
    "cell": "podIP",
    "header": "Pod IP",
    "sort": "podIP",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-policy 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "disabled",
    "header": "Disabled",
    "sort": "disabled",
  },
  Object {
    "cell": "-",
    "header": "Violations",
    "sort": "compliant",
  },
  Object {
    "cell": "remediationAction",
    "header": "Remediation action",
    "sort": "remediationAction",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-policyreport 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "scope",
    "header": "Scope",
    "sort": "scope",
    "tooltip": "Scope refers to the cluster associated to the PolicyReport.",
  },
  Object {
    "cell": "critical",
    "header": "Critical",
    "sort": "critical",
  },
  Object {
    "cell": "important",
    "header": "Important",
    "sort": "important",
  },
  Object {
    "cell": "moderate",
    "header": "Moderate",
    "sort": "moderate",
  },
  Object {
    "cell": "low",
    "header": "Low",
    "sort": "low",
  },
  Object {
    "cell": "-",
    "header": "Rules",
    "tooltip": "Use the rules filter to search for PolicyReports that contain a specific rule.",
  },
  Object {
    "cell": "-",
    "header": "Categories",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-release 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "status",
    "header": "Status",
    "sort": "status",
  },
  Object {
    "cell": "chartName",
    "header": "Chart name",
    "sort": "chartName",
  },
  Object {
    "cell": "chartVersion",
    "header": "Chart version",
    "sort": "chartVersion",
  },
  Object {
    "cell": "-",
    "header": "Updated",
    "sort": "updated",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-replicaset 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "desired",
    "header": "Desired",
    "sort": "desired",
  },
  Object {
    "cell": "current",
    "header": "Current",
    "sort": "current",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-secret 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "type",
    "header": "Type",
    "sort": "type",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-service 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "type",
    "header": "Type",
    "sort": "type",
  },
  Object {
    "cell": "clusterIP",
    "header": "Cluster IP",
    "sort": "clusterIP",
  },
  Object {
    "cell": "port",
    "header": "Port",
    "sort": "port",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-statefulset 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "desired",
    "header": "Desired",
    "sort": "desired",
  },
  Object {
    "cell": "current",
    "header": "Current",
    "sort": "current",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-subscription.apps.open-cluster-management.io 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "package",
    "header": "Package",
    "sort": "package",
  },
  Object {
    "cell": "status",
    "header": "Status",
    "sort": "status",
  },
  Object {
    "cell": "localPlacement",
    "header": "Local placement",
    "sort": "localPlacement",
  },
  Object {
    "cell": "timeWindow",
    "header": "Time window",
    "sort": "timeWindow",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-subscription.operators.coreos.io 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "package",
    "header": "Package",
    "sort": "package",
  },
  Object {
    "cell": "source",
    "header": "Source",
    "sort": "source",
  },
  Object {
    "cell": "Channel",
    "header": "Channel",
    "sort": "Channel",
  },
  Object {
    "cell": "in a month",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      collapse={Array []}
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns category components 1`] = `
<AcmLabels
  collapse={Array []}
  labels={
    Array [
      "testcategory=category1",
      "testcategory=category2",
    ]
  }
/>
`;

exports[`Correctly returns empty CreateApplicationTopologyLink 1`] = `"-"`;

exports[`Correctly returns empty CreateExternalLink 1`] = `"-"`;

exports[`Correctly returns empty labels 1`] = `"-"`;

exports[`Correctly returns formatSearchbarSuggestions no timestamp 1`] = `"-"`;

exports[`Correctly returns formatSearchbarSuggestions with T in timestamp 1`] = `"3 days ago"`;

exports[`Correctly returns formatSearchbarSuggestions without T in timestamp 1`] = `"3 days ago"`;

exports[`Correctly returns label components 1`] = `
<AcmLabels
  collapse={Array []}
  labels={
    Array [
      "testlabel=label1",
      "testlabel=label2",
    ]
  }
/>
`;

exports[`Correctly returns policyreport policies 1`] = `
<AcmLabels
  collapse={
    Array [
      "MASTER_DEFINED_AS_MACHINESETS",
      "NODES_MINIMUM_REQUIREMENTS_NOT_MET",
      "UNSUPPORT_SDN_PLUGIN",
    ]
  }
  labels={
    Array [
      "AUTH_OPERATOR_PROXY_ERROR",
      "CONTAINER_ROOT_PARTITION_SIZE",
      "MASTER_DEFINED_AS_MACHINESETS",
      "NODES_MINIMUM_REQUIREMENTS_NOT_MET",
      "UNSUPPORT_SDN_PLUGIN",
    ]
  }
/>
`;

exports[`Correctly returns resource with managedHub column: SearchDefinitions-global-node 1`] = `
Array [
  Object {
    "cell": <CreateDetailsLink
      item={
        Object {
          "apiversion": "v1",
          "cluster": "testCluster",
          "kind": "Node",
          "managedhub": "testManagedHub",
          "name": "node.1",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": <React.Fragment>
      testCluster
      <TextContent>
        <Text
          component="small"
        >
          testManagedHub
        </Text>
      </TextContent>
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "status",
    "header": "Status",
    "sort": "status",
  },
  Object {
    "cell": "role",
    "header": "Role",
    "sort": "role",
  },
  Object {
    "cell": "architecture",
    "header": "Architecture",
    "sort": "architecture",
  },
  Object {
    "cell": "osImage",
    "header": "OS image",
    "sort": "osImage",
  },
  Object {
    "cell": "cpu",
    "header": "CPU",
    "sort": "cpu",
  },
  Object {
    "cell": "-",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": "-",
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns url search params with 0 params 1`] = `"?cluster%3DtestCluster"`;

exports[`Correctly returns url search params with all params & apigroup 1`] = `"?cluster%3DtestCluster%26kind%3DPod%26apiversion%3Dv1%26namespace%3DtestNamespace%26name%3DtestName"`;

exports[`Correctly returns url search params with all params without apigroup 1`] = `"?cluster%3DtestCluster%26kind%3DPod%26apiversion%3Dv1%26namespace%3DtestNamespace%26name%3DtestName"`;
